test_case/rust-lang_rust/17757_57900606.rs
 rust
LICENSE

extern crate foo as bar;
//~^ ERROR expected `;`, found `as`; perhaps you meant to enclose the crate name (`foo`) in a string?
